update java 15 -> 17 (gradle)