@@ -1,9 +1,10 @@
 plugins {
 	id 'java'
+
 	id 'org.flywaydb.flyway' version '8.0.5'
-	id 'org.springframework.boot' version '2.4.1'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-	id 'com.google.cloud.tools.jib' version '2.8.0'
+	id 'org.springframework.boot' version '2.7.1'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'com.google.cloud.tools.jib' version '3.2.1'
 }
 
 group = 'com.design'
@@ -38,6 +39,7 @@ dependencies {
 
 	// mybatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 
 	// session
 //	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.6.7'
@@ -61,11 +63,13 @@ dependencies {
 	// devtool
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	implementation platform('org.testcontainers:testcontainers-bom:1.16.3')
+	testImplementation 'org.testcontainers:postgresql'
+	testImplementation 'org.testcontainers:junit-jupiter'
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 	testImplementation 'org.mockito:mockito-inline'
 	testImplementation 'org.flywaydb:flyway-core'
 }
@@ -80,18 +84,11 @@ flyway {
 	schemas = ['testdb']
 }
 
-compileJava {
-	sourceCompatibility = '15'
-	targetCompatibility = '15'
-}
-
-compileTestJava {
-	sourceCompatibility = '15'
-	targetCompatibility = '15'
-	options.compilerArgs += ['--enable-preview']
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 test {
 	useJUnitPlatform()
-	jvmArgs = ['--enable-preview']
 }
